# secure-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/compression/: Cargo.toml
examples/compression/src/: main.rs
examples/encryption/: Cargo.toml
examples/encryption/src/: main.rs
github/workflows/: ci.yml
samples/: loremipsum.txt
src/: lib.rs
src/backend/: aes.rs  brotli.rs  mod.rs
src/include_secure_bytes/: mod.rs  params.rs
src/include_secure_str/: mod.rs  params.rs
src/methods/: mod.rs  secure_str.rs
src/secure_str/: mod.rs  params.rs
tests/: include_secure_bytes.rs  include_secure_str.rs  mod.rs  secure_str.rs
