[package]
name = "secure"
version = "0.1.4"
edition = "2024"
description = "Solution that encrypt or compress rust consts in compile-time"
authors = ["Leon Farafonov <leofaraf@proton.me>"]
license = "MIT"
repository = "https://github.com/leofaraf/secure-rs"

[features]
default = []
compression = ["base64", "brotli"]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
base64 = { version = "0.22.1", optional = true }
brotli = { version = "7.0.0", optional = true }