[package]
name = "secure"
version = "0.3.0"
edition = "2024"
description = "Solution that encrypt or compress rust consts in compile-time"
authors = ["Leon Farafonov <leofaraf@proton.me>, Iliy <iosdsbb@gmail.com>"]
license = "MIT"
repository = "https://github.com/leofaraf/secure-rs"
documentation = "https://docs.rs/secure"

[features]
default = ["compression", "encryption"]
compression = ["brotli"]
encryption = ["byte-aes"]

[lib]
proc-macro = true
required-features = ["proc_macro_span"]
path = "src/lib.rs"

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
base64 = "0.22.1"
brotli = { version = "7.0.0", optional = true }
byte-aes = { version = "0.2.2", optional = true }